force-app/main/default/objects/Fake_Product__c/Fake_Product__c.object-meta.xml
<CustomObject>
    <label>Fake Product</label>
    <nameField>
        <label>Product Fake Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fake Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>