force-app/main/default/objects/Fake_Product__c/fields/id__c.field-meta.xml
<CustomField>
    <fullName>id__c</fullName>
    <label>id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>