force-app/main/default/objects/Fake_Product__c/fields/updatedAt__c.field-meta.xml
<CustomField>
    <fullName>updatedAt__c</fullName>
    <label>updatedAt</label>
    <type>Date</type>
</CustomField>