force-app/main/default/objects/Fake_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>title__c</columns>
    <columns>price__c</columns>
    <columns>description__c</columns>
    <columns>creationAt__c</columns>
    <columns>updatedAt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>